Add footer quote feature & style

--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
     <script src="assets/theme.js" defer></script>
     <script src="assets/header-loader.js" defer></script>
     <script src="assets/hero-controls-loader.js" defer></script>
+    <script src="assets/footer-loader.js" defer></script>
+    <script src="assets/random-quote.js" defer></script>
 </head>
 <body>
     <div class="hero" fetchpriority="high">
@@ -70,9 +72,7 @@
             </section>
         </main>
 
-        <footer>
-            <div>Stay Cool</div>
-        </footer>
+        <!-- footer injected at runtime from assets/components/footer.html -->
     </div>
 
 </body>
