--- a/articles.html
+++ b/articles.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="assets/theme.css">
     <script src="assets/theme.js" defer></script>
         <script src="assets/header-loader.js" defer></script>
-        <script src="assets/hero-controls-loader.js" defer></script>
+            <script src="assets/hero-controls-loader.js" defer></script>
+            <script src="assets/footer-loader.js" defer></script>
+            <script src="assets/random-quote.js" defer></script>
 </head>
 <body>
     <div class="hero" fetchpriority="high">
@@ -55,9 +57,7 @@
             </section>
         </main>
 
-        <footer>
-            <div>Stay Cool</div>
-        </footer>
+        <!-- footer injected at runtime from assets/components/footer.html -->
     </div>
 
     <script>
