Refactor css location.

--- a/page-template.html
+++ b/page-template.html
@@ -6,12 +6,12 @@
   <title>New Page — evilkittens.co</title>
   <meta name="description" content="Describe this page briefly." />
   <link rel="canonical" href="https://evilkittens.co/" />
-  <link rel="stylesheet" href="assets/theme.css">
+  <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
   <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
-  <script src="assets/theme.js" defer></script>
-  <script src="assets/header-loader.js" defer></script>
-  <script src="assets/hero-controls-loader.js" defer></script>
+  <script src="assets/js/theme.js" defer></script>
+  <script src="assets/js/header-loader.js" defer></script>
+  <script src="assets/js/hero-controls-loader.js" defer></script>
 </head>
 <body>
   <div class="wrap">
