--- a/articles.html
+++ b/articles.html
@@ -9,12 +9,12 @@
     <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
     <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
-    <link rel="stylesheet" href="assets/theme.css">
-    <script src="assets/theme.js" defer></script>
-        <script src="assets/header-loader.js" defer></script>
-            <script src="assets/hero-controls-loader.js" defer></script>
-            <script src="assets/footer-loader.js" defer></script>
-            <script src="assets/random-quote.js" defer></script>
+    <link rel="stylesheet" href="assets/css/theme.css">
+    <script src="assets/js/theme.js" defer></script>
+        <script src="assets/js/header-loader.js" defer></script>
+            <script src="assets/js/hero-controls-loader.js" defer></script>
+            <script src="assets/js/footer-loader.js" defer></script>
+            <script src="assets/js/random-quote.js" defer></script>
 </head>
 <body>
     <div class="hero" fetchpriority="high">
