--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <div class="wrap">
         <!-- header injected at runtime from assets/components/header.html -->
         <main>
+            <div class="callout callout--note">
+                <strong>Note:</strong> This site is a work in progress.
+            </div>
             <section class="card" id="intro">
                 <h1>Introduction</h1>
                 <p class="small">
