ADD TRACKING -- ffs

--- a/articles.html
+++ b/articles.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
     <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
     <link rel="stylesheet" href="assets/css/theme.css">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="4d6bc04d-80dd-4bb2-8d8e-cf7ff3c29ca6"></script>
     <script src="assets/js/theme.js" defer></script>
         <script src="assets/js/header-loader.js" defer></script>
             <script src="assets/js/hero-controls-loader.js" defer></script>
