--- a/page-template.html
+++ b/page-template.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
   <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="4d6bc04d-80dd-4bb2-8d8e-cf7ff3c29ca6"></script>
   <script src="assets/js/theme.js" defer></script>
   <script src="assets/js/header-loader.js" defer></script>
   <script src="assets/js/hero-controls-loader.js" defer></script>
