--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     The strong focus on fundamentals is because these are the areas where I've most often seen folks get into trouble. One article which has proven itself to be highly valuable in mitigating avoidable pain and expense is: <i>Domain Names, DNS, and URLs for DevOps and Friends.</i>
                 </p>
                 <p class="small">
-                    Look around. There are no pay-walls here. No ads. No tracking. Just knowledge, freely shared.<br>
+                    Look around. There are no pay-walls here. No ads. No outrageous tracking... (umami.is with EU data locality) Just knowledge, freely shared.<br>
                     But if you do find that something has saved you a few million, or even just a few hundy, consider <a href="https://buymeacoffee.com/evilkittenlord" target="_blank" rel="noopener noreferrer" style="color:var(--accent)">buying me a coffee</a>.
                 </p>
             </section>
