--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     <div class="hero" fetchpriority="high">
-        <div class="hero-inner">
-                <div class="container">
+        <div class="hero-inner" fetchpriority="high">
+                <div class="container" fetchpriority="high">
                     <h2>Welcome</h2>
                 <p class="small">I built this site. Nifty, eh?</p>
                 </div>
@@ -36,12 +36,16 @@
             <section class="card" id="intro">
                 <h1>Introduction</h1>
                 <p class="small">
-                    I live for getting the best out of people and technology, and take great pride in seeing folks succeed. To this end I've authored much organizational and technical documentation, and over time found that GISTs were an easy way share knowledge. The content ranges from scripts to full guides and primers on various topics.<br>
-                    I've been asked if I had a table of contents, or a blog (<i>shudder</i>) -- so now I do.
+                    I live for getting the best out of people and technology, and take great pride in seeing folks succeed. To this end I've authored much organizational and technical documentation, a good amount of which found its way into GISTs, which are an easy way to persist and share knowledge. I've been asked if I had a table of contents, or a blog (<i>shudder</i>) -- and now I do.
                 </p>
                 <p class="small">
-                    The strong focus on fundamentals is because these are the areas where I've most often seen folks get into trouble. One article which has proven itself to be highly valuable in mitigating avoidable pain and expense is: <i>Domain Names, DNS, and URLs for DevOps and Friends.</i>
+                    This site, along with being my homepage, will serve as a curated index of those GISTs.
                 </p>
+                <h2>Fundamentals</h2>
+                <p class="small">
+                    My strong focus on fundamentals is because these are the areas where I've most often seen folks get into trouble. One article which has proven itself to mitigate avoidable pain and expense is: <i>Domain Names, DNS, and URLs for DevOps and Friends.</i> This article has purchase across many disciplines, especially Product Owners and Marketing, as their early decisions in this area have significant technical and financial implications downstream.
+                </p>
+                <h2>Support My Work</h2>
                 <p class="small">
                     Look around. There are no pay-walls here. No ads. No outrageous tracking... (umami.is with EU data locality) Just knowledge, freely shared.<br>
                     But if you do find that something has saved you a few million, or even just a few hundy, consider <a href="https://buymeacoffee.com/evilkittenlord" target="_blank" rel="noopener noreferrer" style="color:var(--accent)">buying me a coffee</a>.
