--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
     <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
+    <link rel="preload" as="image" href="assets/images/avatar-alex-in-summer_512.webp">
+    <link rel="preload" as="style" href="assets/css/theme.css">
+    <link rel="preload" as="style" href="assets/css/_base.css">
+    <link rel="preload" as="style" href="assets/css/_cards.css">
+    <link rel="preload" as="style" href="assets/css/_controls.css">
+    <link rel="preload" as="style" href="assets/css/_header.css">
+    <link rel="preload" as="style" href="assets/css/_hero.css">
+    <link rel="preload" as="style" href="assets/css/_layout.css">
+    <link rel="preload" as="style" href="assets/css/_variables.css">
     <link rel="stylesheet" href="assets/css/theme.css">
     <script defer src="https://cloud.umami.is/script.js" data-website-id="4d6bc04d-80dd-4bb2-8d8e-cf7ff3c29ca6"></script>
     <script src="assets/js/theme.js" defer></script>
@@ -19,8 +28,8 @@
 </head>
 <body>
     <div class="hero" fetchpriority="high">
-        <div class="hero-inner" fetchpriority="high">
-                <div class="container" fetchpriority="high">
+        <div class="hero-inner">
+                <div class="container">
                     <h2>Welcome</h2>
                 <p class="small">I built this site. Nifty, eh?</p>
                 </div>
