Load CSS partials directly instead of chaining through theme.css

--- a/about.html
+++ b/about.html
@@ -9,7 +9,13 @@
     <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
     <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
-    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/_variables.css">
+    <link rel="stylesheet" href="assets/css/_base.css">
+    <link rel="stylesheet" href="assets/css/_layout.css">
+    <link rel="stylesheet" href="assets/css/_header.css">
+    <link rel="stylesheet" href="assets/css/_hero.css">
+    <link rel="stylesheet" href="assets/css/_cards.css">
+    <link rel="stylesheet" href="assets/css/_controls.css">
     <script defer src="https://cloud.umami.is/script.js" data-website-id="4d6bc04d-80dd-4bb2-8d8e-cf7ff3c29ca6"></script>
     <script src="assets/js/theme.js" defer></script>
     <script src="assets/js/header-loader.js" defer></script>
@@ -38,10 +44,10 @@
                     It sounds simple, and it <i>may be</i>, but the odds of that are slim. This is where I come in.
                 </p>
                 <p class="small">
-                    Having had the fortune of working with some amazing people and organizations, from startups to global enterprises across a variety of industries, I've built a broad suite of expertise that spans the various disciplines involved in the SDLC and ALM. One of the major benefits of this is being able to size solutions for organizations appropriately for the product, market, region, and objectives. This is essential in enabling meaningful corporate agility, and getting things moving in the right direction early, while avoiding technical debt.
+                    Having had the fortune of working with some amazing people and organizations, from startups to global enterprises across a variety of industries, I've built a broad suite of expertise that spans the various disciplines involved in the SDLC and ALM. One of the major benefits of this is being able to size solutions for organizations appropriately for their products, market, region, and objectives. This is essential in enabling corporate agility, and getting things moving in the right direction early, while avoiding technical debt.
                 </p>
                 <p class="small">
-                    I am very specifically <i>not</i> a developer, and will never advertise myself as such. I deeply respect the varying areas of expertise in this field, and believe that my cognitive load is best spent on my passions: Infrastructure, Platform Engineering, and DevOps. That said, aside from the usual operational tooling, I have been known to write some wicked code, on occasion. This website, for example, is the first site I've ever seen achieve a perfect score from Lighthouse.
+                    I am very specifically <i>not</i> a developer, and will never advertise myself as such. My expertise lies in: Infrastructure, Platform Engineering, DevOps, and Quality of Life. That said, aside from the usual operational tooling, I have been known to write some wicked code, on occasion. This website, for example, achieves a perfect <a href="https://web.dev/measure/" target="_blank" rel="noopener noreferrer" style="color:var(--accent)">100/100 performance score</a>, and is built entirely from scratch, with no frameworks or libraries.
                 </p>
 
                 <h2>My Priorities</h2>
