--- a/page-template.html
+++ b/page-template.html
@@ -6,7 +6,13 @@
   <title>New Page — evilkittens.co</title>
   <meta name="description" content="Describe this page briefly." />
   <link rel="canonical" href="https://evilkittens.co/" />
-  <link rel="stylesheet" href="assets/css/theme.css">
+  <link rel="stylesheet" href="assets/css/_variables.css">
+  <link rel="stylesheet" href="assets/css/_base.css">
+  <link rel="stylesheet" href="assets/css/_layout.css">
+  <link rel="stylesheet" href="assets/css/_header.css">
+  <link rel="stylesheet" href="assets/css/_hero.css">
+  <link rel="stylesheet" href="assets/css/_cards.css">
+  <link rel="stylesheet" href="assets/css/_controls.css">
   <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
   <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
   <script defer src="https://cloud.umami.is/script.js" data-website-id="4d6bc04d-80dd-4bb2-8d8e-cf7ff3c29ca6"></script>
