--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
     <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
-    <link rel="stylesheet" href="assets/css/_variables.css">
-    <link rel="stylesheet" href="assets/css/_base.css">
-    <link rel="stylesheet" href="assets/css/_layout.css">
-    <link rel="stylesheet" href="assets/css/_header.css">
-    <link rel="stylesheet" href="assets/css/_hero.css">
+    <link rel="preload" as="style" href="assets/css/_variables.css">
+    <link rel="preload" as="style" href="assets/css/_base.css">
+    <link rel="preload" as="style" href="assets/css/_layout.css">
+    <link rel="preload" as="style" href="assets/css/_header.css">
+    <link rel="preload" as="style" href="assets/css/_hero.css">
     <link rel="stylesheet" href="assets/css/_cards.css">
     <link rel="stylesheet" href="assets/css/_controls.css">
     <script defer src="https://cloud.umami.is/script.js" data-website-id="4d6bc04d-80dd-4bb2-8d8e-cf7ff3c29ca6"></script>
