--- a/z/free-stuff.html
+++ b/z/free-stuff.html
@@ -42,7 +42,7 @@
   <div id="stage">
     <div class="line l1">All your base...</div>
     <div class="line l2">Are belong to us!</div>
-    <div class="line l3">You have been backed by...</div>
+    <div class="line l3">You have been hacked<br>by...</div>
     <div class="line l4">Alex Atkinson</div>
   </div>
 </body>
