RM preloads, update titles and meta data.

--- a/about.html
+++ b/about.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>About — Alex Atkinson @ evilkittens.co</title>
-    <meta name="description" content="About Alex Atkinson — experience, interests and contact links." />
+    <meta name="description" content="About Alex Atkinson — Identity | Values | Mission." />
     <link rel="canonical" href="https://evilkittens.co/about.html" />
     <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
-    <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
     <link rel="stylesheet" href="assets/css/_variables.css">
     <link rel="stylesheet" href="assets/css/_base.css">
     <link rel="stylesheet" href="assets/css/_layout.css">
@@ -28,7 +27,7 @@
         <div class="hero-inner">
             <div class="container">
                 <h2>About</h2>
-                <p class="small">Developers! Developers! Developers! DevOps!?</p>
+                <p class="small">Identity | Values | Mission.</p>
             </div>
         </div>
     </div>
