--- a/articles.html
+++ b/articles.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Alex Atkinson @ evilkittens.co - Articles</title>
-    <meta name="description" content="Curated index of useful GISTs." />
+    <meta name="description" content="Articles - Tools & Knowledge" />
     <link rel="canonical" href="https://evilkittens.co/articles.html" />
     <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
