--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Alex Atkinson @ evilkittens.co</title>
-    <meta name="description" content="Curated index of useful GISTs." />
+    <meta name="description" content="Alex Atkinson — Online" />
     <link rel="canonical" href="https://evilkittens.co/" />
     <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
-    <link rel="preload" as="image" href="assets/images/bike-in-summer.webp">
     <link rel="preload" as="style" href="assets/css/_variables.css">
     <link rel="preload" as="style" href="assets/css/_base.css">
     <link rel="preload" as="style" href="assets/css/_layout.css">
