--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>About — Alex Atkinson @ evilkittens.co</title>
-    <meta name="description" content="About Alex Atkinson — Identity | Values | Mission." />
+    <meta name="description" content="About Alex Atkinson — Identity | Values | Mission" />
     <link rel="canonical" href="https://evilkittens.co/about.html" />
     <link rel="icon" href="assets/images/favicon.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="assets/images/favicon.jpg">
