Add branching gist

--- a/articles.html
+++ b/articles.html
@@ -74,6 +74,7 @@
             '1487a84b54bb8774ee623c3e32924875', // Project Management
             '7be00d6be71fab970210006b9574e1e5', // Versioning
             '37d64e4e0527f6e5f9d57280669ad055', // Artifacting
+            '7db2eb20b0edd93a550f90bcac2c2c0f', // Branching
             '73ea6369877210f4969fcc0028b93769', // Security Intro
             '42d91031604aaedc0ec5a879afb3410f', // Domain Names, DNS & URLs
             '28d694866ce134a10d1a356ada244558', // CORS
