Link styling and homepage content.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 <p class="small">
                     My strong focus on fundamentals is because these are the areas where I've most often seen folks get into trouble. One article which has proven itself to mitigate avoidable pain and expense is: <i>Domain Names, DNS, and URLs for DevOps and Friends.</i> This article has purchase across many disciplines, especially Product Owners and Marketing, as their early decisions in this area have significant technical and financial implications downstream.
                 </p>
+                <p class="small">
+                    <i>Security</i> is obviously an area where I dedicate an abundant amount of energy. I've even been mentioned in <a href='https://www.forbes.com/'>Forbes</a> in their article <a href='https://www.forbes.com/sites/daveywinder/2025/05/08/new-gmail-2fa-code-attack-alert---dont-lose-your-account-access/'>Google Says "Remain Vigilant" as Gmail Hack Attack is Confirmed</a>.<br>
+                    (Yes, my little business name is EvilKittens Co., and I am the EvilKittenLord.)
+                </p>
                 <h2>Support My Work</h2>
                 <p class="small">
                     Look around. There are no pay-walls here. No ads. No outrageous tracking... (umami.is with EU data locality) Just knowledge, freely shared.<br>
